<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/surname"
        android:ems="10"
        android:id="@+id/surname"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:ems="10"
        android:id="@+id/email"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repassword" />
            <LinearLayout
                    android:id="@+id/fullAddress"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/billingAddress"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/billingAddress" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/area" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/province"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/province" />
                <EditText
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/code"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/postalCode" />
             </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:text="@string/register"
        android:id="@+id/button"
        android:layout_gravity="right" />

</LinearLayout>