<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/orland_square_mall">

<LinearLayout
    android:id="@+id/loginCover"
    android:layout_weight="0.1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColorTrans"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textSize="60dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/backgroundColor"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="30dp"
        android:ems="10"
        android:id="@+id/lgn_name"
        android:textColor="@color/backgroundColor"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/backgroundColor"
        android:ems="10"
        android:id="@+id/lgn_password" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/pointer"
        android:layout_gravity="right"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registerQuoute"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/backgroundColor"
        android:layout_height="wrap_content" />


</LinearLayout>

    <LinearLayout
        android:id="@+id/buttonCover"
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/accentColorTrans"
        android:padding="0dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/create_account"
            android:textSize="20dp"
            android:textColor="@color/backgroundColor"
            android:background="@color/accentColor"/>
    </LinearLayout>



</LinearLayout>